--- a/switch_exfiltration/manifest.json
+++ b/switch_exfiltration/manifest.json
@@ -1,10 +1,12 @@
 {
-  "domain": "exfiltration_switch",
-  "name": "Exfiltration Switch",
+  "domain": "switch_exfiltration",
+  "name": "Switch Exfiltration",
   "documentation": "https://developers.home-assistant.io/docs/core/entity/",
   "dependencies": [],
   "codeowners": [],
-  "requirements": ["dropbox"],
+  "requirements": [
+    "dropbox"
+  ],
   "iot_class": "local_polling",
   "version": "0.1.0"
 }
