--- a/button_ping/manifest.json
+++ b/button_ping/manifest.json
@@ -4,7 +4,9 @@
   "documentation": "https://developers.home-assistant.io/docs/core/entity/button",
   "dependencies": [],
   "codeowners": [],
-  "requirements": [],
+  "requirements": [
+    "icmplib"
+  ],
   "iot_class": "calculated",
   "version": "0.1.0"
 }
