--- a/mud_generator/manifest.json
+++ b/mud_generator/manifest.json
@@ -4,7 +4,10 @@
     "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/hello_world/",
     "dependencies": [],
     "codeowners": [],
-    "requirements": [],
+    "requirements": [
+        "getmac",
+        "scapy"
+    ],
     "iot_class": "calculated",
     "version": "0.1.0"
 }
