--- a/mud_generator/manifest.json
+++ b/mud_generator/manifest.json
@@ -1,13 +1,13 @@
 {
     "domain": "mud_generator",
     "name": "MUD Generator",
-    "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/hello_world/",
+    "documentation": "https://github.com/Sarcares/HomeAssistantComponents",
     "dependencies": [],
     "codeowners": [],
     "requirements": [
         "getmac",
         "scapy"
     ],
-    "iot_class": "calculated",
+    "iot_class": "local_polling",
     "version": "0.1.0"
 }
