--- a/emulated_remote_temp_sensor/manifest.json
+++ b/emulated_remote_temp_sensor/manifest.json
@@ -9,5 +9,5 @@
   ],
   "iot_class": "local_polling",
   "version": "0.1.0",
-  "mud_file": "temp_sensor.mud.json"
+  "___mud_file": "temp_sensor.mud.json"
 }
