--- a/light_stealing/manifest.json
+++ b/light_stealing/manifest.json
@@ -5,8 +5,9 @@
   "dependencies": [],
   "codeowners": [],
   "requirements": [
-    "dropbox"
+    "dropbox",
+    "pyyaml"
   ],
   "iot_class": "local_polling",
-  "version": "0.2.1"
+  "version": "0.2.2"
 }
