--- a/light_integrity/manifest.json
+++ b/light_integrity/manifest.json
@@ -4,9 +4,7 @@
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_light/",
   "dependencies": [],
   "codeowners": [],
-  "requirements": [
-    "pyyaml"
-  ],
+  "requirements": [],
   "iot_class": "local_polling",
-  "version": "0.1.0"
+  "version": "0.2.1"
 }
