--- a/light_confidentiality/manifest.json
+++ b/light_confidentiality/manifest.json
@@ -1,6 +1,6 @@
 {
-  "domain": "light_stealing",
-  "name": "Light Stealing",
+  "domain": "light_confidentiality",
+  "name": "Light Confidentiality",
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_light/",
   "dependencies": [],
   "codeowners": [],
@@ -9,5 +9,5 @@
     "pyyaml"
   ],
   "iot_class": "local_polling",
-  "version": "0.2.4"
+  "version": "0.3.0"
 }
